<resources>
    <string name="app_name">PickUp-Rider</string>
    <string name="welcome_back">Welcome Back !!</string>
    <string name="find_the_pickers_around_you_for_your_npickup">Confirm your identity that you are rider ?</string>
    <string name="i_m_rider">I\'m Rider</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="hey_rider">Hey Rider!!</string>
    <string name="are_you_ready_for_your_pickup">Are you ready for your Pickup?</string>
    <string name="phone_number">Phone Number</string>
    <string name="hey_customer">Hey Customer!!</string>
    <string name="are_you_ready_with_your_pickup_and_destination">Are you ready with your pickup and destination?</string>
    <string name="title_activity_rider">RiderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome, User</string>
    <string name="nav_header_subtitle">test@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_exit">Sign Out</string>
    <string name="ratings">Ratings</string>
    <string name="capture_otp">Capture OTP</string>
    <string name="got_the_otp_then_enter_it_to_start_your_journey_with_pickup">Got the OTP? then, Enter it to start your journey with PickUp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="click_to_start_the_journey_with_pickup">Click to Start the journey with Pickup</string>
    <string name="register_yourself">Register Yourself !!</string>
    <string name="hey_rider_don_t_panic_it_s_just_some_details_to_proceed">Hey Rider !! Don\'t Panic it\'s just some details to proceed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="now_start_with_your_pickups">Now start with your Pickups!!</string>
    <string name="start_with_the_pickup">Start with the Pickup !!</string>
    <string name="hey_customer_don_t_worry_we_need_the_details_to_do_the_pickup_smoothly">Hey Customer !! Don\'t worry we need the details to do the pickup smoothly...</string>
    <string name="continue_with_pickup">Continue with Pickup</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="phone">+910000000000</string>
</resources>